<resources>
    <string name="app_name">ThirdParty</string>
    <string name="action_settings">Settings</string>
    <string name="copy_linking_success">复制成功</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_to">分享至</string>
    <string name="share_close">关闭</string>
    <string name="share_to_sina_tip">新浪微博</string>
    <string name="share_to_qq_tip">QQ好友</string>
    <string name="share_to_qzone_tip">QQ空间</string>
    <string name="share_to_wx_tip">微信好友</string>
    <string name="share_to_wx_friends_tip">微信朋友圈</string>
    <string name="share_to_sms_tip">短信</string>
    <string name="share_to_copy_linking">复制链接</string>

</resources>
